# engmanager.xyz

./: .gitignore  Cargo.toml  README.md
.claude/agents/: graydon-rust-engineer.md  prompt-engineer.md
.claude/commands/: GRAYSON.md  PROMPT.md  kill-port-3000.md  kill-port.md
.claude/skills/: rust-feature-architecture.md
_docs/: ARCHITECTURE.md  JS.md  crud-pattern-analysis.md  crud-pattern-tutorial-surrealdb.md  crud-pattern-tutorial.md  sqlite-sqlx-setup.md  surrealdb-setup.md
_docs/SEO_ENGINEER/: SEO.md  SEO_STYLEGUIDE.md  seo-engineer.md
_docs/research/: modern-css-features-2025.md
_docs/tutorials/: rust-axum-render-cloudflare-revised.md  rust-axum-render-cloudflare.md
data/: homepage.json  routes.json
migrations/: 20251125053555_create_routes_table.sql
prompts/: 001-consolidate-js-skills.md  002-clarify-js-skill-relationship.md  003-research-monaco-editor-integration.md  004-implement-monaco-web-component.md  005-integrate-monaco-backend-save.md  006-schema-driven-form-renderer.md  007-properties-panel-web-components.md  008-properties-panel-integration.md  009-crud-pattern-research.md  010-crud-pattern-skill.md
website/: Cargo.toml
website/assets/: admin-index.css  styles.css
website/src/: main.rs
website/src/admin/: mod.rs
website/src/core/: block.rs  mod.rs  persistence.rs  render.rs
website/src/features/: mod.rs  story.rs
website/src/features/admin/editor/: README.md  script.js  styles.css
website/src/features/admin/editor/components/: admin-editor.js  block-list.js  index.js  json-editor.js  message-banner.js  monaco-json-editor.js  tab-switcher.js
website/src/features/button/: mod.rs  schema.rs  story.rs  styles.css  template.rs
website/src/features/checkbox/: mod.rs  schema.rs  styles.css  template.rs
website/src/features/header/: mod.rs  schema.rs  story.rs  styles.css  template.rs
website/src/features/hero/: mod.rs  schema.rs  styles.css  template.rs
website/src/features/input/: mod.rs  schema.rs  styles.css  template.rs
website/src/pages/: homepage.rs  mod.rs
website/src/pages/admin/: admin_index_template.rs  api.rs  features.rs  homepage_editor.rs  mod.rs  page_editor.rs  routes.rs
website/src/pages/admin/data/content/: homepage.json
website/src/pages/admin/routes/: mod.rs
(+21 files in other folders)
