[workspace]
members = [
    "website",
]
resolver = "3"

[workspace.dependencies]
# Error handling
anyhow = "1"
thiserror = "2.0.17"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }

# HTTP (for dev server and future API)
axum = { version = "0.8.7", features = ["ws"] }
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6", features = ["fs", "trace", "timeout", "cors"] }

# Templates
maud = "0.27.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite"] }

# Testing
proptest = "1.9"